# LifeTracker

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  books.csv  docker-compose.yml  main.py  output.txt  pyproject.toml  requirements.txt  runserver.py  vercel.json
src/: main.py  vercel.json
src/application/dto/: books.py  user.py
src/config/: config.py
src/core/: config.py
src/db/: db_manager.py  main.py
src/dependency/: dependency_manager.py
src/dependency/user/: dependency_manager.py
src/domain/book/: book_repository.py  model.py
src/domain/expenses/: expenses_repository.py  model.py  requestModel.py
src/domain/habits/: habits_repository.py  model.py
src/domain/products/: model.py
src/domain/user/: model.py  user_repository.py
src/dto/: books.py  expenses.py
src/infrastructure/: dependecy.py
src/infrastructure/config/: dev_env.py
src/infrastructure/constants/: books_types.py  cryptocurrency.py  types_expenses.py
src/infrastructure/db/: db_manager.py
src/interfaces/: requests_schemas.py  response_schemas.py
src/middleware/: verify_origin_cors.py  verify_token.py  verify_token_middleware.py
src/modelRequest/: book.py  user.py
src/repository/: expense_interface.py  expense_repository.py  queries.py
src/routes/: book.py  expense.py  user.py
src/services/: auth.py  book.py  book_services.py  cotization.py  expense_service.py  user_service.py
src/useCase/: expense.py  expense_use_case.py
src/useCases/: book_use_cases.py
src/utils/: alert.py  format_data.py  valid_type_input.py
(+29 files in other folders)
