[tool.poetry]
name = "lifetracker"
version = "0.1.0"
description = "Service for manage my monthly expenses"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.1"
sqlmodel = "^0.0.22"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
requests = "^2.32.3"
greenlet = "^3.1.1"
pre-commit = "^4.0.1"
bcrypt = "^4.2.0"
poetry-plugin-export = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
